Fix overflow in product details image

--- a/voam.client/src/components/ProductDetails/ProductDetails.module.css
+++ b/voam.client/src/components/ProductDetails/ProductDetails.module.css
@@ -19,6 +19,7 @@
   max-height: 800px;
   align-items: center;
   justify-content: center;
+  overflow: hidden;
 }
 
 .productDetails {
